--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 
 [dependencies]
 axum = "0.6.18"
-futures = "0.3.28"
-mongodb = {version="2.5.0"}
+diesel = { version = "2.1.0", features = ["postgres"] }
+dotenvy = "0.15"
 serde = {version="1.0.163", features = ["derive"] }
 tokio = {version="1.28.1",features=["macros", "rt-multi-thread"]}
 
