--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 axum = "0.6.18"
 diesel = { version = "2.1.0", features = ["postgres"] }
+diesel-enum = "0.1.0"
 dotenvy = "0.15"
 serde = {version="1.0.163", features = ["derive"] }
 tokio = {version="1.28.1",features=["macros", "rt-multi-thread"]}
