--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ diesel = { version = "2.1.0", features = ["postgres"] }
 diesel-enum = "0.1.0"
 dotenvy = "0.15"
 serde = {version="1.0.163", features = ["derive"] }
+serde_json = "1.0.100"
 tokio = {version="1.28.1",features=["macros", "rt-multi-thread"]}
 
